--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,14 @@ footer {
     background-color: aliceblue;
   }
 
+  .col-3 {
+    width: 50%;
+  }
+
+
   #column-1 {
     background-color: aqua;
+    width: 100%;
   }
 
   #column-2 {
@@ -88,8 +94,13 @@ footer {
     background-color: chartreuse;
   }
 
+  .col-3 {
+    width: 33.3%;
+  }
+
   #column-1 {
     background-color: darkgreen;
+    width: 33.3%;
   }
 
   #column-2 {
